--- a/package.json
+++ b/package.json
@@ -19,7 +19,5 @@
   "devDependencies": {
     "markdownlint-cli": "^0.13.0"
   },
-  "dependencies": {
-    "js-yaml": "^3.13.1"
-  }
+  "dependencies": {}
 }
